lib/image_ffmpeg_bindings_generated.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

@ffi.Native<ffi.Uint32 Function()>()
external int image_ffmpeg_abi_version();

@ffi.Native<ffi.Pointer<ffi.Char> Function()>()
external ffi.Pointer<ffi.Char> image_ffmpeg_build_info();

@ffi.Native<ffi.Int32 Function()>()
external int image_ffmpeg_has_ffmpeg();

/// Reads image format, geometry, EXIF orientation, frame count, and alpha hints
/// without decoding a pixel buffer.
@ffi.Native<
  ffi.Int32 Function(
    ffi.Pointer<ffi.Uint8>,
    ffi.Uint32,
    ffi.Pointer<image_ffmpeg_image_info>,
  )
>()
external int image_ffmpeg_probe_image(
  ffi.Pointer<ffi.Uint8> input,
  int input_length,
  ffi.Pointer<image_ffmpeg_image_info> output,
);

/// Probes arbitrary encoded bytes as an image, decodes the first frame, and
/// returns tightly packed RGBA8888. A zero maximum preserves that axis. If both
/// maxima are non-zero, aspect ratio is preserved and the image fits within the
/// requested box without upscaling.
///
/// This coarse operation is intentional: one boundary crossing owns probing,
/// decode, scale, pixel conversion, and allocation on native and WebAssembly.
@ffi.Native<
  ffi.Int32 Function(
    ffi.Pointer<ffi.Uint8>,
    ffi.Uint32,
    ffi.Uint32,
    ffi.Uint32,
    ffi.Pointer<image_ffmpeg_image>,
  )
>()
external int image_ffmpeg_decode_image_rgba(
  ffi.Pointer<ffi.Uint8> input,
  int input_length,
  int max_width,
  int max_height,
  ffi.Pointer<image_ffmpeg_image> output,
);

/// Decodes the first frame at full resolution, then fits it within a square and
/// folds every source pixel into exactly one destination cell using integer-only
/// box averaging. Decode and fold remain inside native/Wasm memory, so only the
/// small deterministic RGBA result crosses the language boundary. The result is
/// never upscaled and max_dimension must be nonzero.
@ffi.Native<
  ffi.Int32 Function(
    ffi.Pointer<ffi.Uint8>,
    ffi.Uint32,
    ffi.Uint32,
    ffi.Uint32,
    ffi.Pointer<image_ffmpeg_image>,
  )
>()
external int image_ffmpeg_decode_image_rgba_box_average(
  ffi.Pointer<ffi.Uint8> input,
  int input_length,
  int max_dimension,
  int alpha_mode,
  ffi.Pointer<image_ffmpeg_image> output,
);

/// Encodes RGBA8888 as JPEG. Quality is 1..100. background_argb is 0xAARRGGBB
/// (the alpha byte is ignored); chroma is IMAGE_FFMPEG_JPEG_CHROMA_420 or _444.
@ffi.Native<
  ffi.Int32 Function(
    ffi.Pointer<ffi.Uint8>,
    ffi.Uint32,
    ffi.Uint32,
    ffi.Uint32,
    ffi.Uint32,
    ffi.Uint32,
    ffi.Uint32,
    ffi.Uint32,
    ffi.Pointer<image_ffmpeg_buffer>,
  )
>()
external int image_ffmpeg_encode_jpeg_rgba(
  ffi.Pointer<ffi.Uint8> rgba,
  int rgba_length,
  int width,
  int height,
  int stride,
  int quality,
  int chroma,
  int background_argb,
  ffi.Pointer<image_ffmpeg_buffer> output,
);

/// Encodes RGBA8888 pixels as a complete PNG image, preserving alpha.
/// Compression level is 0 (fastest) to 9 (smallest).
@ffi.Native<
  ffi.Int32 Function(
    ffi.Pointer<ffi.Uint8>,
    ffi.Uint32,
    ffi.Uint32,
    ffi.Uint32,
    ffi.Uint32,
    ffi.Uint32,
    ffi.Pointer<image_ffmpeg_buffer>,
  )
>()
external int image_ffmpeg_encode_png_rgba(
  ffi.Pointer<ffi.Uint8> rgba,
  int rgba_length,
  int width,
  int height,
  int stride,
  int compression_level,
  ffi.Pointer<image_ffmpeg_buffer> output,
);

/// Fused first-frame decode, optional EXIF orientation, solid fill, crop,
/// fit-within resize, and JPEG/PNG encode. Fill and crop coordinates are in
/// oriented coordinates when apply_orientation is nonzero. Zero fill or crop
/// width and height disable that operation.
@ffi.Native<
  ffi.Int32 Function(
    ffi.Pointer<ffi.Uint8>,
    ffi.Uint32,
    ffi.Pointer<image_ffmpeg_transcode_options>,
    ffi.Pointer<image_ffmpeg_encoded_image>,
  )
>()
external int image_ffmpeg_transcode_image(
  ffi.Pointer<ffi.Uint8> input,
  int input_length,
  ffi.Pointer<image_ffmpeg_transcode_options> options,
  ffi.Pointer<image_ffmpeg_encoded_image> output,
);

/// Releases output->data and zeroes the struct. Safe on a zeroed image.
@ffi.Native<ffi.Void Function(ffi.Pointer<image_ffmpeg_image>)>()
external void image_ffmpeg_image_release(ffi.Pointer<image_ffmpeg_image> image);

@ffi.Native<ffi.Void Function(ffi.Pointer<image_ffmpeg_buffer>)>()
external void image_ffmpeg_buffer_release(
  ffi.Pointer<image_ffmpeg_buffer> buffer,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<image_ffmpeg_encoded_image>)>()
external void image_ffmpeg_encoded_image_release(
  ffi.Pointer<image_ffmpeg_encoded_image> image,
);

@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Int32)>()
external ffi.Pointer<ffi.Char> image_ffmpeg_error_message(int status);

enum image_ffmpeg_status {
  IMAGE_FFMPEG_OK(0),
  IMAGE_FFMPEG_ERROR_INVALID_ARGUMENT(-1),
  IMAGE_FFMPEG_ERROR_FFMPEG_NOT_LINKED(-2),
  IMAGE_FFMPEG_ERROR_DECODE(-3),
  IMAGE_FFMPEG_ERROR_OUT_OF_MEMORY(-4),
  IMAGE_FFMPEG_ERROR_UNSUPPORTED(-5),
  IMAGE_FFMPEG_ERROR_NOT_IMAGE(-6),
  IMAGE_FFMPEG_ERROR_ENCODE(-7);

  final int value;
  const image_ffmpeg_status(this.value);

  static image_ffmpeg_status fromValue(int value) => switch (value) {
    0 => IMAGE_FFMPEG_OK,
    -1 => IMAGE_FFMPEG_ERROR_INVALID_ARGUMENT,
    -2 => IMAGE_FFMPEG_ERROR_FFMPEG_NOT_LINKED,
    -3 => IMAGE_FFMPEG_ERROR_DECODE,
    -4 => IMAGE_FFMPEG_ERROR_OUT_OF_MEMORY,
    -5 => IMAGE_FFMPEG_ERROR_UNSUPPORTED,
    -6 => IMAGE_FFMPEG_ERROR_NOT_IMAGE,
    -7 => IMAGE_FFMPEG_ERROR_ENCODE,
    _ => throw ArgumentError('Unknown value for image_ffmpeg_status: $value'),
  };
}

enum image_ffmpeg_pixel_format {
  IMAGE_FFMPEG_PIXEL_FORMAT_RGBA8888(1);

  final int value;
  const image_ffmpeg_pixel_format(this.value);

  static image_ffmpeg_pixel_format fromValue(int value) => switch (value) {
    1 => IMAGE_FFMPEG_PIXEL_FORMAT_RGBA8888,
    _ => throw ArgumentError(
      'Unknown value for image_ffmpeg_pixel_format: $value',
    ),
  };
}

enum image_ffmpeg_box_alpha_mode {
  /// Average all four channels from every source pixel.
  IMAGE_FFMPEG_BOX_ALPHA_INCLUDE(0),

  /// Ignore every source pixel whose alpha is not exactly 255. Retained cells
  /// are opaque; cells without an opaque sample remain transparent black.
  IMAGE_FFMPEG_BOX_ALPHA_OPAQUE_ONLY(1);

  final int value;
  const image_ffmpeg_box_alpha_mode(this.value);

  static image_ffmpeg_box_alpha_mode fromValue(int value) => switch (value) {
    0 => IMAGE_FFMPEG_BOX_ALPHA_INCLUDE,
    1 => IMAGE_FFMPEG_BOX_ALPHA_OPAQUE_ONLY,
    _ => throw ArgumentError(
      'Unknown value for image_ffmpeg_box_alpha_mode: $value',
    ),
  };
}

enum image_ffmpeg_image_format {
  IMAGE_FFMPEG_IMAGE_FORMAT_UNKNOWN(0),
  IMAGE_FFMPEG_IMAGE_FORMAT_JPEG(1),
  IMAGE_FFMPEG_IMAGE_FORMAT_PNG(2),
  IMAGE_FFMPEG_IMAGE_FORMAT_APNG(3),
  IMAGE_FFMPEG_IMAGE_FORMAT_WEBP(4),
  IMAGE_FFMPEG_IMAGE_FORMAT_GIF(5),
  IMAGE_FFMPEG_IMAGE_FORMAT_BMP(6),
  IMAGE_FFMPEG_IMAGE_FORMAT_TIFF(7),
  IMAGE_FFMPEG_IMAGE_FORMAT_AVIF(8),
  IMAGE_FFMPEG_IMAGE_FORMAT_PSD(9),
  IMAGE_FFMPEG_IMAGE_FORMAT_ICO(10);

  final int value;
  const image_ffmpeg_image_format(this.value);

  static image_ffmpeg_image_format fromValue(int value) => switch (value) {
    0 => IMAGE_FFMPEG_IMAGE_FORMAT_UNKNOWN,
    1 => IMAGE_FFMPEG_IMAGE_FORMAT_JPEG,
    2 => IMAGE_FFMPEG_IMAGE_FORMAT_PNG,
    3 => IMAGE_FFMPEG_IMAGE_FORMAT_APNG,
    4 => IMAGE_FFMPEG_IMAGE_FORMAT_WEBP,
    5 => IMAGE_FFMPEG_IMAGE_FORMAT_GIF,
    6 => IMAGE_FFMPEG_IMAGE_FORMAT_BMP,
    7 => IMAGE_FFMPEG_IMAGE_FORMAT_TIFF,
    8 => IMAGE_FFMPEG_IMAGE_FORMAT_AVIF,
    9 => IMAGE_FFMPEG_IMAGE_FORMAT_PSD,
    10 => IMAGE_FFMPEG_IMAGE_FORMAT_ICO,
    _ => throw ArgumentError(
      'Unknown value for image_ffmpeg_image_format: $value',
    ),
  };
}

/// Values intentionally match EXIF Orientation tag values.
enum image_ffmpeg_orientation {
  IMAGE_FFMPEG_ORIENTATION_NORMAL(1),
  IMAGE_FFMPEG_ORIENTATION_FLIP_HORIZONTAL(2),
  IMAGE_FFMPEG_ORIENTATION_ROTATE_180(3),
  IMAGE_FFMPEG_ORIENTATION_FLIP_VERTICAL(4),
  IMAGE_FFMPEG_ORIENTATION_TRANSPOSE(5),
  IMAGE_FFMPEG_ORIENTATION_ROTATE_90(6),
  IMAGE_FFMPEG_ORIENTATION_TRANSVERSE(7),
  IMAGE_FFMPEG_ORIENTATION_ROTATE_270(8);

  final int value;
  const image_ffmpeg_orientation(this.value);

  static image_ffmpeg_orientation fromValue(int value) => switch (value) {
    1 => IMAGE_FFMPEG_ORIENTATION_NORMAL,
    2 => IMAGE_FFMPEG_ORIENTATION_FLIP_HORIZONTAL,
    3 => IMAGE_FFMPEG_ORIENTATION_ROTATE_180,
    4 => IMAGE_FFMPEG_ORIENTATION_FLIP_VERTICAL,
    5 => IMAGE_FFMPEG_ORIENTATION_TRANSPOSE,
    6 => IMAGE_FFMPEG_ORIENTATION_ROTATE_90,
    7 => IMAGE_FFMPEG_ORIENTATION_TRANSVERSE,
    8 => IMAGE_FFMPEG_ORIENTATION_ROTATE_270,
    _ => throw ArgumentError(
      'Unknown value for image_ffmpeg_orientation: $value',
    ),
  };
}

enum image_ffmpeg_jpeg_chroma {
  IMAGE_FFMPEG_JPEG_CHROMA_420(0),
  IMAGE_FFMPEG_JPEG_CHROMA_444(1);

  final int value;
  const image_ffmpeg_jpeg_chroma(this.value);

  static image_ffmpeg_jpeg_chroma fromValue(int value) => switch (value) {
    0 => IMAGE_FFMPEG_JPEG_CHROMA_420,
    1 => IMAGE_FFMPEG_JPEG_CHROMA_444,
    _ => throw ArgumentError(
      'Unknown value for image_ffmpeg_jpeg_chroma: $value',
    ),
  };
}

/// Owned output from image_ffmpeg_decode_image_rgba. Keep upstream AVFrame and
/// AVCodecContext details out of this ABI: this exact struct is shared by FFI
/// and Wasm, and remains stable when FFmpeg changes.
final class image_ffmpeg_image extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> data;

  @ffi.Uint32()
  external int length;

  @ffi.Uint32()
  external int width;

  @ffi.Uint32()
  external int height;

  @ffi.Uint32()
  external int stride;

  @ffi.Uint32()
  external int pixel_format;
}

/// Owned encoded bytes returned by an encoder operation.
final class image_ffmpeg_buffer extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> data;

  @ffi.Uint32()
  external int length;
}

/// Probe information without decoded pixels. has_alpha is -1 when the container
/// cannot answer without decoding, 0 for no, and 1 for yes. frame_count is zero
/// when the container does not advertise a count.
final class image_ffmpeg_image_info extends ffi.Struct {
  @ffi.Uint32()
  external int format;

  @ffi.Uint32()
  external int width;

  @ffi.Uint32()
  external int height;

  @ffi.Uint32()
  external int display_width;

  @ffi.Uint32()
  external int display_height;

  @ffi.Uint32()
  external int orientation;

  @ffi.Uint32()
  external int frame_count;

  @ffi.Int32()
  external int has_alpha;
}

final class image_ffmpeg_transcode_options extends ffi.Struct {
  @ffi.Uint32()
  external int output_format;

  @ffi.Uint32()
  external int max_width;

  @ffi.Uint32()
  external int max_height;

  @ffi.Uint32()
  external int apply_orientation;

  @ffi.Uint32()
  external int crop_x;

  @ffi.Uint32()
  external int crop_y;

  @ffi.Uint32()
  external int crop_width;

  @ffi.Uint32()
  external int crop_height;

  @ffi.Uint32()
  external int fill_x;

  @ffi.Uint32()
  external int fill_y;

  @ffi.Uint32()
  external int fill_width;

  @ffi.Uint32()
  external int fill_height;

  @ffi.Uint32()
  external int fill_argb;

  @ffi.Uint32()
  external int jpeg_quality;

  @ffi.Uint32()
  external int jpeg_chroma;

  @ffi.Uint32()
  external int jpeg_background_argb;

  @ffi.Uint32()
  external int png_compression_level;

  @ffi.Uint32()
  external int passthrough_if_unchanged;
}

final class image_ffmpeg_encoded_image extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> data;

  @ffi.Uint32()
  external int length;

  @ffi.Uint32()
  external int width;

  @ffi.Uint32()
  external int height;

  @ffi.Uint32()
  external int format;
}

const int IMAGE_FFMPEG_ABI_VERSION = 5;
